Banner Message Responses
Rewrote banner responses to be UniTime Academic Session aware.

The Banner -> Message Responses page was rewritten in GWT.  The original version still exists and can be access by setting the “banner.menu.display_orig_message_responses” appliciation property to “true”.  The new message responses page can be hidden by setting the “banner.menu.display_new_message_responses” application property to “false”.

The ability to store a “No_Change” message to make sure every outgoing Banner message has a corresponding Banner message response has been added.  This can be disabled by setting the application property “banner.queue.saveNoChangeResponses” to “false”.